no breaks in table cells

--- a/collation/index.html
+++ b/collation/index.html
@@ -115,6 +115,7 @@ input[name="language"]:not(:checked) ~ details {
 padding: 0.5rem;
 text-align: center;
 border: 1px dotted black;
+word-break: keep-all;
 }
 
 #results td:empty {
