added more features

--- a/collation/index.html
+++ b/collation/index.html
@@ -148,7 +148,7 @@ rt {
         <section>
             <p>Use this tool to experiment with aligning two strings with different parameters.</p>
             <div>
-                <div class="input-box"><label>Text 1</label><input type="text" value="maṇinā vārtta māṇviṉait tēra"/></div>
+                <div class="input-box"><label>Text 1</label><input type="text" value="மணிநா வார்த்த மாண்வினைத் தேர"/></div>
                 <div class="input-box"><label>Text 2</label><input type="text" value="maṇinā yātta māṇviṉait tēri"/></div>
             </div>
             <div style="display: flex; width: 105rem; justify-content: flex-end">
@@ -173,10 +173,10 @@ rt {
                         <input type="radio" name="tokenization" value="aksara"/><label>Akṣaras (conjuncts and vowels together)</label>
                     </div>
                     <div>
-                        <input type="radio" name="tokenization" value="grapheme"/><label>Akṣaras without conjuncts</label>
+                        <input type="radio" name="tokenization" value="grapheme" checked/><label>Akṣaras without conjuncts</label>
                     </div>
                     <div>
-                        <input type="radio" name="tokenization" value="char" checked/><label>Consonants and vowels separate</label>
+                        <input type="radio" name="tokenization" value="char"/><label>Consonants and vowels separate</label>
                     </div>
                 </details>
                 <details id="normalization" open>
