added more scripts

--- a/collation/index.html
+++ b/collation/index.html
@@ -146,7 +146,7 @@ rt {
     <article>
         <h1>Aligning two texts</h1>
         <section>
-            <p>Use this tool to experiment with aligning two strings with different parameters.</p>
+            <p>Use this tool to experiment with aligning two strings with different parameters. The input can be in IAST/Madras Lexicon transliteration or in Bengali, Devanagari, Grantha, Malayalam, Newa, Sarada, Tamil, or Telugu scripts. Whitespace-delimited tokens in any script can also be used.</p>
             <div>
                 <div class="input-box"><label>Text 1</label><input type="text" value="மணிநா வார்த்த மாண்வினைத் தேர"/></div>
                 <div class="input-box"><label>Text 2</label><input type="text" value="maṇinā yātta māṇviṉait tēri"/></div>
