--- a/collation/index.html
+++ b/collation/index.html
@@ -35,7 +35,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 103rem;
+    width: 85%;
 }
 
 label {
@@ -47,10 +47,11 @@ label {
     flex-direction: row;
     justify-content: space-around;
     padding: 1rem;
+    width: 85%;
 }
 
 input[type="text"] {
-    width: 80rem;
+    flex-grow: 1;
     height: 2rem;
     font-size: 1.2rem;
     padding: 0.5rem;
@@ -151,7 +152,7 @@ rt {
                 <div class="input-box"><label>Text 1</label><input type="text" value="மணிநா வார்த்த மாண்வினைத் தேர"/></div>
                 <div class="input-box"><label>Text 2</label><input type="text" value="maṇinā yātta māṇviṉait tēri"/></div>
             </div>
-            <div style="display: flex; width: 105rem; justify-content: flex-end">
+            <div style="display: flex; width: 85%; justify-content: flex-end">
                 <button id="alignsubmit" style="font-size: 1.2rem; padding: 0.5rem">Align</button>
             </div>
             <fieldset class="options">
