updated tokenization wording

--- a/collation/index.html
+++ b/collation/index.html
@@ -174,7 +174,7 @@ rt {
                         <input type="radio" name="tokenization" value="aksara"/><label>Akṣaras (conjuncts and vowels together)</label>
                     </div>
                     <div>
-                        <input type="radio" name="tokenization" value="grapheme" checked/><label>Akṣaras without conjuncts</label>
+                        <input type="radio" name="tokenization" value="grapheme" checked/><label>Eḻuttu (without conjuncts)</label>
                     </div>
                     <div>
                         <input type="radio" name="tokenization" value="char"/><label>Consonants and vowels separate</label>
