Added support for idno

--- a/collation/multialign.html
+++ b/collation/multialign.html
@@ -283,7 +283,7 @@ button:hover, label[for="teifiles"]:hover {
 
 <body lang="en">
     <article>
-        <h1>Aligning mutiple texts</h1>
+        <h1>Aligning multiple texts</h1>
         <section>
             <p>Use this tool to experiment with aligning TEI XML transcriptions of different version of the same text.</p>
             <div id="inputboxen">
